--- a/report-service/src/test/resources/com/overops/quality/report/testHeader.html
+++ b/report-service/src/test/resources/com/overops/quality/report/testHeader.html
@@ -1,3 +1,5 @@
+<div class="d-flex align-center mt-3">
+    <div class="mr-2">
 <svg class="overopsLogo" width="172px" height="38px" viewBox="0 0 172 38" version="1.1">
     <g id="Assets" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="overops_logo_172" fill-rule="nonzero">
@@ -14,3 +16,7 @@
         </g>
     </g>
 </svg>
+    </div>
+    <h1>Quality Report</h1>
+
+</div>
