[OOE-24] Using embedded SVG images which have been cleaned up of unecessary HTML tags and have been renamed to prevent classpath conflicts

--- a/report-service/src/test/resources/com/overops/report/service/model/testQualityReport2.html
+++ b/report-service/src/test/resources/com/overops/report/service/model/testQualityReport2.html
@@ -169,11 +169,7 @@ svg:not(.overopsLogo) {
         <h1>Quality Report</h1>
     </div>
     <div class="alert alert-danger d-flex align-center">
-        <?xml version="1.0" encoding="UTF-8"?>
-<svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 57.1 (83088) - https://sketch.com -->
-    <title>ic_error_48</title>
-    <desc>Created with Sketch.</desc>
+        <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <defs>
         <path d="M20,0 C8.96,0 0,8.96 0,20 C0,31.04 8.96,40 20,40 C31.04,40 40,31.04 40,20 C40,8.96 31.04,0 20,0 Z M22,30 L18,30 L18,26 L22,26 L22,30 Z M22,22 L18,22 L18,10 L22,10 L22,22 Z" id="path-1"></path>
     </defs>
@@ -200,7 +196,7 @@ svg:not(.overopsLogo) {
         <tbody>
             <tr>
     <td>
-        <svg width="48px" height="48px" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+        <svg width="24px" height="24px" aria-hidden="true" focusable="false" role="img" viewBox="0 0 320 512">
 <path fill="#EE6557" d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"></path>
 </svg>
         <a href="#new-gate">New</a>
@@ -210,7 +206,7 @@ svg:not(.overopsLogo) {
 </tr>
             <tr>
     <td>
-        <svg width="48px" height="48px" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+        <svg width="24px" height="24px" aria-hidden="true" focusable="false" role="img" viewBox="0 0 320 512">
 <path fill="#EE6557" d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"></path>
 </svg>
         <a href="#resurfaced-gate">Resurfaced</a>
@@ -220,7 +216,7 @@ svg:not(.overopsLogo) {
 </tr>
             <tr>
     <td>
-        <svg width="48px" height="48px" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+        <svg width="24px" height="24px" aria-hidden="true" focusable="false" role="img" viewBox="0 0 320 512">
 <path fill="#EE6557" d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"></path>
 </svg>
         <a href="#total-gate">Total</a>
@@ -230,7 +226,7 @@ svg:not(.overopsLogo) {
 </tr>
             <tr>
     <td>
-        <svg width="48px" height="48px" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+        <svg width="24px" height="24px" aria-hidden="true" focusable="false" role="img" viewBox="0 0 320 512">
 <path fill="#EE6557" d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"></path>
 </svg>
         <a href="#unique-gate">Unique</a>
@@ -240,7 +236,7 @@ svg:not(.overopsLogo) {
 </tr>
             <tr>
     <td>
-        <svg width="48px" height="48px" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+        <svg width="24px" height="24px" aria-hidden="true" focusable="false" role="img" viewBox="0 0 320 512">
 <path fill="#EE6557" d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"></path>
 </svg>
         <a href="#critical-gate">Critical</a>
@@ -250,7 +246,7 @@ svg:not(.overopsLogo) {
 </tr>
             <tr>
     <td>
-        <svg width="48px" height="48px" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+        <svg width="24px" height="24px" aria-hidden="true" focusable="false" role="img" viewBox="0 0 320 512">
 <path fill="#EE6557" d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"></path>
 </svg>
         <a href="#increasing-gate">Increasing</a>
@@ -261,11 +257,7 @@ svg:not(.overopsLogo) {
         </tbody>
     </table>
     <div class="d-flex align-center mt-4 mb-2">
-    <?xml version="1.0" encoding="UTF-8"?>
-<svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 57.1 (83088) - https://sketch.com -->
-    <title>ic_error_48</title>
-    <desc>Created with Sketch.</desc>
+    <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <defs>
         <path d="M20,0 C8.96,0 0,8.96 0,20 C0,31.04 8.96,40 20,40 C31.04,40 40,31.04 40,20 C40,8.96 31.04,0 20,0 Z M22,30 L18,30 L18,26 L22,26 L22,30 Z M22,22 L18,22 L18,10 L22,10 L22,22 Z" id="path-1"></path>
     </defs>
@@ -311,11 +303,7 @@ svg:not(.overopsLogo) {
     </tbody>
 </table>
     <div class="d-flex align-center mt-4 mb-2">
-    <?xml version="1.0" encoding="UTF-8"?>
-<svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 57.1 (83088) - https://sketch.com -->
-    <title>ic_error_48</title>
-    <desc>Created with Sketch.</desc>
+    <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <defs>
         <path d="M20,0 C8.96,0 0,8.96 0,20 C0,31.04 8.96,40 20,40 C31.04,40 40,31.04 40,20 C40,8.96 31.04,0 20,0 Z M22,30 L18,30 L18,26 L22,26 L22,30 Z M22,22 L18,22 L18,10 L22,10 L22,22 Z" id="path-1"></path>
     </defs>
@@ -369,11 +357,7 @@ svg:not(.overopsLogo) {
     </tbody>
 </table>
     <div class="d-flex align-center mt-4 mb-2">
-    <?xml version="1.0" encoding="UTF-8"?>
-<svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 57.1 (83088) - https://sketch.com -->
-    <title>ic_error_48</title>
-    <desc>Created with Sketch.</desc>
+    <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <defs>
         <path d="M20,0 C8.96,0 0,8.96 0,20 C0,31.04 8.96,40 20,40 C31.04,40 40,31.04 40,20 C40,8.96 31.04,0 20,0 Z M22,30 L18,30 L18,26 L22,26 L22,30 Z M22,22 L18,22 L18,10 L22,10 L22,22 Z" id="path-1"></path>
     </defs>
@@ -389,11 +373,7 @@ svg:not(.overopsLogo) {
     <h4 id="total-gate">Message for: TOTAL_EVENTS_TEST</h4>
 </div>
     <div class="d-flex align-center mt-4 mb-2">
-    <?xml version="1.0" encoding="UTF-8"?>
-<svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 57.1 (83088) - https://sketch.com -->
-    <title>ic_error_48</title>
-    <desc>Created with Sketch.</desc>
+    <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <defs>
         <path d="M20,0 C8.96,0 0,8.96 0,20 C0,31.04 8.96,40 20,40 C31.04,40 40,31.04 40,20 C40,8.96 31.04,0 20,0 Z M22,30 L18,30 L18,26 L22,26 L22,30 Z M22,22 L18,22 L18,10 L22,10 L22,22 Z" id="path-1"></path>
     </defs>
@@ -463,11 +443,7 @@ svg:not(.overopsLogo) {
     </tbody>
 </table>
     <div class="d-flex align-center mt-4 mb-2">
-    <?xml version="1.0" encoding="UTF-8"?>
-<svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 57.1 (83088) - https://sketch.com -->
-    <title>ic_error_48</title>
-    <desc>Created with Sketch.</desc>
+    <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <defs>
         <path d="M20,0 C8.96,0 0,8.96 0,20 C0,31.04 8.96,40 20,40 C31.04,40 40,31.04 40,20 C40,8.96 31.04,0 20,0 Z M22,30 L18,30 L18,26 L22,26 L22,30 Z M22,22 L18,22 L18,10 L22,10 L22,22 Z" id="path-1"></path>
     </defs>
@@ -529,11 +505,7 @@ svg:not(.overopsLogo) {
     </tbody>
 </table>
     <div class="d-flex align-center mt-4 mb-2">
-    <?xml version="1.0" encoding="UTF-8"?>
-<svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 57.1 (83088) - https://sketch.com -->
-    <title>ic_error_48</title>
-    <desc>Created with Sketch.</desc>
+    <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <defs>
         <path d="M20,0 C8.96,0 0,8.96 0,20 C0,31.04 8.96,40 20,40 C31.04,40 40,31.04 40,20 C40,8.96 31.04,0 20,0 Z M22,30 L18,30 L18,26 L22,26 L22,30 Z M22,22 L18,22 L18,10 L22,10 L22,22 Z" id="path-1"></path>
     </defs>
