--- a/report-service/src/test/resources/com/overops/report/service/model/testQualityReport3.html
+++ b/report-service/src/test/resources/com/overops/report/service/model/testQualityReport3.html
@@ -169,11 +169,7 @@ svg:not(.overopsLogo) {
         <h1>Quality Report</h1>
     </div>
     <div class="alert alert-warning d-flex align-center">
-        <?xml version="1.0" encoding="UTF-8"?>
-<svg width="48px" height="48px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 55.2 (78181) - https://sketchapp.com -->
-    <title>ic_warning_48</title>
-    <desc>Created with Sketch.</desc>
+        <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <defs>
         <path d="M4,41 L44,41 L24,7 L4,41 Z M25,36 L22,36 L22,33 L25,33 L25,36 Z M25,29 L22,29 L22,22 L25,22 L25,29 Z" id="path-1"></path>
     </defs>
@@ -204,11 +200,7 @@ svg:not(.overopsLogo) {
         <tbody>
             <tr>
     <td>
-        <?xml version="1.0" encoding="UTF-8"?>
-<svg width="48px" height="48px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 57.1 (83088) - https://sketch.com -->
-    <title>ic_check_green_48</title>
-    <desc>Created with Sketch.</desc>
+        <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <g id="Assets" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="ic_check_green_48">
             <g id="icons/ic_check_green_48">
@@ -227,11 +219,7 @@ svg:not(.overopsLogo) {
 </tr>
             <tr>
     <td>
-        <?xml version="1.0" encoding="UTF-8"?>
-<svg width="48px" height="48px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 57.1 (83088) - https://sketch.com -->
-    <title>ic_check_green_48</title>
-    <desc>Created with Sketch.</desc>
+        <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <g id="Assets" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="ic_check_green_48">
             <g id="icons/ic_check_green_48">
@@ -250,11 +238,7 @@ svg:not(.overopsLogo) {
 </tr>
             <tr>
     <td>
-        <?xml version="1.0" encoding="UTF-8"?>
-<svg width="48px" height="48px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 57.1 (83088) - https://sketch.com -->
-    <title>ic_check_green_48</title>
-    <desc>Created with Sketch.</desc>
+        <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <g id="Assets" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="ic_check_green_48">
             <g id="icons/ic_check_green_48">
@@ -273,11 +257,7 @@ svg:not(.overopsLogo) {
 </tr>
             <tr>
     <td>
-        <?xml version="1.0" encoding="UTF-8"?>
-<svg width="48px" height="48px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 57.1 (83088) - https://sketch.com -->
-    <title>ic_check_green_48</title>
-    <desc>Created with Sketch.</desc>
+        <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <g id="Assets" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="ic_check_green_48">
             <g id="icons/ic_check_green_48">
@@ -296,11 +276,7 @@ svg:not(.overopsLogo) {
 </tr>
             <tr>
     <td>
-        <?xml version="1.0" encoding="UTF-8"?>
-<svg width="48px" height="48px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 57.1 (83088) - https://sketch.com -->
-    <title>ic_check_green_48</title>
-    <desc>Created with Sketch.</desc>
+        <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <g id="Assets" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="ic_check_green_48">
             <g id="icons/ic_check_green_48">
@@ -319,11 +295,7 @@ svg:not(.overopsLogo) {
 </tr>
             <tr>
     <td>
-        <?xml version="1.0" encoding="UTF-8"?>
-<svg width="48px" height="48px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 57.1 (83088) - https://sketch.com -->
-    <title>ic_check_green_48</title>
-    <desc>Created with Sketch.</desc>
+        <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <g id="Assets" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="ic_check_green_48">
             <g id="icons/ic_check_green_48">
@@ -343,11 +315,7 @@ svg:not(.overopsLogo) {
         </tbody>
     </table>
     <div class="d-flex align-center mt-4 ">
-    <?xml version="1.0" encoding="UTF-8"?>
-<svg width="48px" height="48px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 57.1 (83088) - https://sketch.com -->
-    <title>ic_check_green_48</title>
-    <desc>Created with Sketch.</desc>
+    <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <g id="Assets" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="ic_check_green_48">
             <g id="icons/ic_check_green_48">
@@ -363,11 +331,7 @@ svg:not(.overopsLogo) {
 </div><p class="ml-2 muted">Nothing to report</p>
 
     <div class="d-flex align-center mt-4 ">
-    <?xml version="1.0" encoding="UTF-8"?>
-<svg width="48px" height="48px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 57.1 (83088) - https://sketch.com -->
-    <title>ic_check_green_48</title>
-    <desc>Created with Sketch.</desc>
+    <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <g id="Assets" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="ic_check_green_48">
             <g id="icons/ic_check_green_48">
@@ -383,11 +347,7 @@ svg:not(.overopsLogo) {
 </div><p class="ml-2 muted">Nothing to report</p>
 
     <div class="d-flex align-center mt-4 mb-2">
-    <?xml version="1.0" encoding="UTF-8"?>
-<svg width="48px" height="48px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 57.1 (83088) - https://sketch.com -->
-    <title>ic_check_green_48</title>
-    <desc>Created with Sketch.</desc>
+    <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <g id="Assets" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="ic_check_green_48">
             <g id="icons/ic_check_green_48">
@@ -402,11 +362,7 @@ svg:not(.overopsLogo) {
     <h4 id="total-gate">Message for: TOTAL_EVENTS_TEST</h4>
 </div><p class="ml-2 muted">Nothing to report</p>
     <div class="d-flex align-center mt-4 mb-2">
-    <?xml version="1.0" encoding="UTF-8"?>
-<svg width="48px" height="48px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 57.1 (83088) - https://sketch.com -->
-    <title>ic_check_green_48</title>
-    <desc>Created with Sketch.</desc>
+    <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <g id="Assets" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="ic_check_green_48">
             <g id="icons/ic_check_green_48">
@@ -422,11 +378,7 @@ svg:not(.overopsLogo) {
 </div><p class="ml-2 muted">Nothing to report</p>
 
     <div class="d-flex align-center mt-4 mb-2">
-    <?xml version="1.0" encoding="UTF-8"?>
-<svg width="48px" height="48px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 57.1 (83088) - https://sketch.com -->
-    <title>ic_check_green_48</title>
-    <desc>Created with Sketch.</desc>
+    <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <g id="Assets" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="ic_check_green_48">
             <g id="icons/ic_check_green_48">
@@ -442,11 +394,7 @@ svg:not(.overopsLogo) {
 </div><p class="ml-2 muted">Nothing to report</p>
 
     <div class="d-flex align-center mt-4 ">
-    <?xml version="1.0" encoding="UTF-8"?>
-<svg width="48px" height="48px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 57.1 (83088) - https://sketch.com -->
-    <title>ic_check_green_48</title>
-    <desc>Created with Sketch.</desc>
+    <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <g id="Assets" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="ic_check_green_48">
             <g id="icons/ic_check_green_48">
