[OOE-24] Converted most things over to HBS, still need some cleanup.

--- a/report-service/src/test/resources/com/overops/report/service/model/testQualityReport3.html
+++ b/report-service/src/test/resources/com/overops/report/service/model/testQualityReport3.html
@@ -314,6 +314,7 @@ svg:not(.overopsLogo) {
 </tr>
         </tbody>
     </table>
+
     <div class="d-flex align-center mt-4 ">
     <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <g id="Assets" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -328,7 +329,8 @@ svg:not(.overopsLogo) {
     </g>
 </svg>
     <h4 id="new-gate">Message for: NEW_EVENTS_TEST</h4>
-</div><p class="ml-2 muted">Nothing to report</p>
+</div>
+<p class="ml-2 muted">Nothing to report</p>
 
     <div class="d-flex align-center mt-4 ">
     <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
@@ -344,7 +346,8 @@ svg:not(.overopsLogo) {
     </g>
 </svg>
     <h4 id="resurfaced-gate">Message for: RESURFACED_EVENTS_TEST</h4>
-</div><p class="ml-2 muted">Nothing to report</p>
+</div>
+        <p class="ml-2 muted">Nothing to report</p>
 
     <div class="d-flex align-center mt-4 mb-2">
     <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
@@ -360,8 +363,9 @@ svg:not(.overopsLogo) {
     </g>
 </svg>
     <h4 id="total-gate">Message for: TOTAL_EVENTS_TEST</h4>
-</div><p class="ml-2 muted">Nothing to report</p>
-    <div class="d-flex align-center mt-4 mb-2">
+</div>
+        <p class="ml-2 muted">Nothing to report</p>
+        <div class="d-flex align-center mt-4 mb-2">
     <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <g id="Assets" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="ic_check_green_48">
@@ -375,7 +379,8 @@ svg:not(.overopsLogo) {
     </g>
 </svg>
     <h4 id="unique-gate">Message for: UNIQUE_EVENTS_TEST</h4>
-</div><p class="ml-2 muted">Nothing to report</p>
+</div>
+        <p class="ml-2 muted">Nothing to report</p>
 
     <div class="d-flex align-center mt-4 mb-2">
     <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
@@ -391,7 +396,8 @@ svg:not(.overopsLogo) {
     </g>
 </svg>
     <h4 id="critical-gate">Message for: CRITICAL_EVENTS_TEST</h4>
-</div><p class="ml-2 muted">Nothing to report</p>
+</div>
+        <p class="ml-2 muted">Nothing to report</p>
 
     <div class="d-flex align-center mt-4 ">
     <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
@@ -407,8 +413,8 @@ svg:not(.overopsLogo) {
     </g>
 </svg>
     <h4 id="increasing-gate">Message for: REGRESSION_EVENTS_TEST</h4>
-</div><p class="ml-2 muted">Nothing to report</p>
-
+</div>
+        <p class="ml-2 muted">Nothing to report</p>
 </div>
 </body>
 </html>
