[OOE-24] Everything in Handlebars; still need to cleanup stuff

--- a/report-service/src/test/resources/com/overops/report/service/model/testQualityReport3.html
+++ b/report-service/src/test/resources/com/overops/report/service/model/testQualityReport3.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Overops Report</title>
-        <style>.overops-quality-report a {
+        <style>
+            .overops-quality-report a {
     text-decoration: none;
 }
 .overops-quality-report a:hover {
@@ -144,9 +145,11 @@ svg:not(.overopsLogo) {
     width: 20px;
     height: 20px;
     margin: -5px 5px -5px -10px;
-}</style>
+}
+        </style>
     </head>
-    <body><div class="overops-quality-report">
+    <body>
+    <div class="overops-quality-report">
     <div class="d-flex align-center mt-3">
         <div class="mr-2">
             <svg class="overopsLogo" width="172px" height="38px" viewBox="0 0 172 38" version="1.1">
