--- a/report-service/src/test/resources/com/overops/report/service/model/testQualityReport3.html
+++ b/report-service/src/test/resources/com/overops/report/service/model/testQualityReport3.html
@@ -385,7 +385,7 @@ svg:not(.overopsLogo) {
 </div>
         <p class="ml-2 muted">Nothing to report</p>
 
-    <div class="d-flex align-center mt-4 mb-2">
+    <div class="d-flex align-center mt-4">
     <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <g id="Assets" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="ic_check_green_48">
