[OOE-43] Fixing broken unit test

--- a/report-service/src/test/resources/com/overops/report/service/model/testQualityReport2.html
+++ b/report-service/src/test/resources/com/overops/report/service/model/testQualityReport2.html
@@ -374,6 +374,58 @@ svg:not(.overopsLogo) {
 </svg>
     <h4 id="total-gate">Message for: TOTAL_EVENTS_TEST</h4>
 </div>
+    <table class="tabletable-striped">
+      <thead>
+        <tr>
+            <th>TopEventsAffectingTotalErrorGates</th>
+            <th>Application(s)</th>
+            <th>Introducedby</th>
+            <th>Volume</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+            <td>
+                <a href="someArcLink51"target="_blank">someEventSummary(TOTAL_EVENTS_TEST)51</a>
+            </td>
+            <td>someApplications51</td>
+            <td>someIntroducedBy51</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>
+                <a href="someArcLink52"target="_blank">someEventSummary(TOTAL_EVENTS_TEST)52</a>
+            </td>
+            <td>someApplications52</td>
+            <td>someIntroducedBy52</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>
+                <a href="someArcLink53"target="_blank">someEventSummary(UNIQUE_EVENTS_TEST)53</a>
+            </td>
+            <td>someApplications53</td>
+            <td>someIntroducedBy53</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>
+                <a href="someArcLink54"target="_blank">someEventSummary(UNIQUE_EVENTS_TEST)54</a>
+            </td>
+            <td>someApplications54</td>
+            <td>someIntroducedBy54</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>
+                <a href="someArcLink55"target="_blank">someEventSummary(UNIQUE_EVENTS_TEST)55</a>
+            </td>
+            <td>someApplications55</td>
+            <td>someIntroducedBy55</td>
+            <td>1</td>
+        </tr>
+      </tbody>
+    </table>
     <div class="d-flex align-center mt-4 mb-2">
     <svg width="24px" height="24px" viewBox="0 0 48 48" version="1.1">
     <defs>
@@ -393,7 +445,7 @@ svg:not(.overopsLogo) {
     <table class="table table-striped">
     <thead>
         <tr>
-            <th>Event</th>
+            <th>TopEventsAffectingUniqueErrorGates</th>
             <th>Application(s)</th>
             <th>Introduced by</th>
             <th>Volume</th>
