--- a/report-service/src/test/resources/com/overops/report/service/model/testQualityReport1.html
+++ b/report-service/src/test/resources/com/overops/report/service/model/testQualityReport1.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Overops Report</title>
+        <title>OverOps Quality Report</title>
         <style>
 .overops-quality-report a {
     text-decoration: none;
