--- a/report-service/src/test/resources/com/overops/report/service/model/testQualityReport1.html
+++ b/report-service/src/test/resources/com/overops/report/service/model/testQualityReport1.html
@@ -146,6 +146,12 @@ svg:not(.overopsLogo) {
     height: 20px;
     margin: -5px 5px -5px -10px;
 }
+
+.overops-quality-report .event-location {
+    color: hsl(0, 0%, 60%);
+    padding-left: 10px;
+    margin: 0px;
+}
 </style>
     </head>
     <body>
