--- a/report-service/src/test/resources/com/overops/report/service/model/testQualityReport3.html
+++ b/report-service/src/test/resources/com/overops/report/service/model/testQualityReport3.html
@@ -146,7 +146,13 @@ svg:not(.overopsLogo) {
     height: 20px;
     margin: -5px 5px -5px -10px;
 }
-        </style>
+
+.overops-quality-report .event-location {
+  color: hsl(0, 0%, 60%);
+  padding-left: 10px;
+  margin: 0px;
+}
+</style>
     </head>
     <body>
     <div class="overops-quality-report">
